@@ -81,9 +81,46 @@ bool test01(void)
   return test;
 }
 
+// boundary condition:  a zero-sized set
+// libstdc++/6282
+bool test02(void)
+{
+  using std::char_traits;  using std::allocator;
+  bool test = true;
+
+  std::bitset<0>  z1;
+  VERIFY( z1.any() == false );
+
+  std::bitset<0>  z2(12345);
+  VERIFY( z2.any() == false );
+
+  std::bitset<0>  z3(std::string("10101010101"));
+  VERIFY( z3.any() == false );
+
+  try {
+    z1.set(0);
+    VERIFY( false );
+  }
+  catch(std::out_of_range& fail) {
+    VERIFY( true );
+  }
+  catch(...) {
+    VERIFY( false );
+  }
+
+  VERIFY( z1.to_ulong() == 0 );
+  VERIFY( ( z1.to_string<char,char_traits<char>,allocator<char> >().empty() ) );
+
+#ifdef DEBUG_ASSERT
+  assert(test);
+#endif
+  return test;
+}
+
 int main()
 {
   test01();
+  test02();
 
   return 0;
 }
